Fixed restaurant container alignment
- added link separator

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,6 +55,11 @@ li {
   text-align: left;
 }
 
+hr {
+  margin-top: 24px;
+  border-top: solid 1px #f2f2f2;
+}
+
 label {
   color: #95989A;
   text-transform: uppercase;
@@ -263,13 +268,17 @@ input[type=tel] {
 .restaurants {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.restaurant_info {
+  display: flex;
+  align-items: center;
 }
 
 .index_main_info {
   padding-left: 24px;
-  display: flex;
-  align-items: center;
+  width: 250px;
 }
 
 .index_main_info p {
@@ -293,6 +302,6 @@ input[type=tel] {
   width: 22px;
 }
 
-.restaurant_info {
-  align-content: flex-start;
+.hours {
+  padding-left: 50px;
 }
